fix: change footer css so it does not overlap article content

--- a/src/mdurocherart/static/css/footer.css
+++ b/src/mdurocherart/static/css/footer.css
@@ -1,6 +1,8 @@
 .footer-style{
     background-color: black;
-    height: 100%;
+    width: 100%;
+    bottom: 0;
+    position: relative;
 }
 
 .footer-link {
